--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "vue": "^2.3.3",
     "vue-electron": "^1.0.6",
     "vue-router": "^2.5.3",
+    "vue2-better-scroll": "^1.0.7",
     "vuex": "^2.3.1"
   },
   "devDependencies": {
